--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-                 <img src="Images/Get Result_transparent.png" alt="JobInfo Finder Logo" class="logo">
+                 <img src="logo.png" alt="JobInfo Finder Logo" class="logo">
     </header>
     <main>
         <div class="search-container">
